# vibebiz-saas-template

./: .env.example  .gitignore  .gitleaks.toml  .hadolint.yaml  .markdownlint.json  .pre-commit-config.yaml  .semgrep.yml  .spectral.yaml  .trivyignore  CLAUDE.md  README.md  coverage.json  eslint.config.js  health-check-report.txt  jest.config.js  jest.setup.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  tsconfig.json  turbo.json  vibebiz-mvp-prd-v1-1.md
.cursor/rules/: api-rules.mdc  base-rules.mdc  content-rules.mdc  database-rules.mdc  devops-reliability-rules.mdc  infrastructure-rules.mdc  mobile-development-rules.mdc  monorepo-rules.mdc  nextjs-typescript-rules.mdc  observability-servicemesh-rules.mdc  post-dev-hygiene-rules.mdc  progressive-architecture-rules.mdc  python-rules.mdc  security-compliance-rules.mdc  testing-rules.mdc
.github/workflows/: enforce-main-source.yml.disabled  security.yml  semgrep.yml  test.yml
apps/public-web/: .eslintrc.json  Dockerfile  jest.config.ts  jest.setup.js  next.config.js  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json
apps/public-web/__tests__/: Button.test.tsx  Navigation.test.tsx  SkipLink.test.tsx  test-utils.ts
apps/public-web/app/: globals.css  layout.tsx  page.tsx
apps/public-web/app/api/health/: route.ts
apps/public-web/e2e/: accessibility.spec.ts  smoke.spec.ts
apps/public-web/playwright-report/: index.html
apps/public-web/src/components/: Button.tsx  Navigation.tsx  SkipLink.tsx  button.config.ts
docs/: spectral-setup.md  testing-strategy.md
infra/: README.md
scripts/: freeze_config.sh  git_cleanup.sh  run-all-checks.sh  run-comprehensive-tests.sh  security-env.sh  security-scan.sh  spectral-wrapper.sh  start-dev-server.sh
scripts/setup/: README.md  build-packages.sh  health-checks.sh  setup-env.sh  setup-linux.sh  setup-macos.sh  setup-tests.sh  setup.sh
services/public-api/: conftest.py  package.json  pyproject.toml
services/public-api/src/: __init__.py  main.py  schemas.py
services/public-api/src/api/: __init__.py  utils.py
services/public-api/tests/: conftest.py  test_main.py  test_utils.py
services/public-api/tests/integration/: __init__.py  conftest.py  test_smoke.py  test_utils_integration.py
services/public-api/tests/utils/: __init__.py  database.py  schema.sql
tests/: .eslintrc.cjs  .eslintrc.js  INTEGRATION_GUIDE.md  README.md  jest.config.mjs  playwright.config.ts  test-results.json  tsconfig.json
tests/accessibility/: wcag-compliance.spec.ts
tests/config/: jest.setup.js
tests/e2e/user-flows/: homepage-smoke.spec.ts
tests/fixtures/: shared-data.json
tests/integration/: multi-tenant-isolation.test.js
tests/playwright-report/: index.html
tests/security/: owasp-top10.test.js
tools/: run-all-checks.sh  run-all-tests.sh  run-comprehensive-tests.sh  security-env.sh  security-scan.sh
tools/setup/: README.md  check-prerequisites.sh  health-checks.sh  install-dependencies.sh  setup-database.sh  setup-env.sh  setup-security.sh  setup-tests.sh  setup-windows.sh  setup.sh
vibebiz_saas_template/: __init__.py
