[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vibebiz-saas-template"
version = "0.1.0"

[project.optional-dependencies]
dev = [
    "ruff==0.5.5",
    "mypy",
    "bandit",
    "safety",
    "semgrep",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
]

[tool.setuptools]
packages = ["apps", "packages", "services"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D"]
ignore = ["D203", "D213"]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
