[tool.poetry]
name = "vibebiz-saas-template"
version = "0.1.0"
description = "A monorepo for the VibeBiz SaaS template."
authors = ["Todd <todd@windsurf.ai>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "==3.12.8"
bcrypt = "==4.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "==0.12.1"
mypy = "==1.16.1"
bandit = "==1.8.5"
safety = "==3.5.2"
semgrep = "==1.127.1"

[tool.poetry.group.test.dependencies]
pytest = "==8.4.1"
pytest-cov = "==6.2.1"
pytest-asyncio = "==1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D"]
ignore = ["D203", "D213"]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
